--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -19,8 +19,8 @@ on:
       - main
     paths:
       - '.config'
-  schedule:
-   - cron: 1 20 * * *
+ # schedule:
+ #  - cron: 1 20 * * *
   watch:
     types: started
 
